# macher

./: .gitattributes  .gitmodules  README.md  extending_forked_package_20240810_0818.qmd  gh.sh  pyproject.toml
docs/: index.md
src/macher/cli/: __init__.py  sync_dependencies.py  sync_original.py
src/macher/original/: gh.sh
