[tool.poetry]
name = "macher"
version = "0.1.0"
description = ""
authors = ["Janko Thyson <janko@kaosmaps.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = [
    { include = "macher", from = "src" },
    { include = "original_package", from = "src" },
]
