[tool.poetry]
name = "macher"
version = "0.0.1"
description = "Extended functionality for frdel/agent-zero"
authors = ["Janko Thyson <janko@kaosmaps.com>"]
readme = "README.md"
packages = [
    { include = "macher", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.scripts]
macher = "macher.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"